prevent zoom on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,7 @@
+* {
+    touch-action: manipulation;
+}
+
 body {
     text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
